fixed design issues like container alignment and such

--- a/styles/github-markdown.css
+++ b/styles/github-markdown.css
@@ -37,7 +37,7 @@
 }
 
 .markdown h2 {
-  @apply leading-tight border-b text-2xl font-semibold mb-4 mt-6 pb-2;
+  @apply leading-tight border-b text-2xl font-semibold mb-4 pb-2;
 }
 
 .markdown h3 {
@@ -102,5 +102,5 @@
 }
 
 .markdown img {
-  @apply mx-auto;
+  @apply mx-auto my-2;
 }
